[gd_scene load_steps=68 format=3 uid="uid://50xwge6vcpc3"]

[ext_resource type="Script" path="res://scripts/character_scripts/main-character.gd" id="1_vdtrp"]
[ext_resource type="Texture2D" uid="uid://8e0ae8uex75k" path="res://assets/main_character/mc_walk_front.png" id="2_emqss"]
[ext_resource type="PackedScene" uid="uid://dl2yfrm37a7ju" path="res://scenes/cutscenes/floor1/objective_overlay.tscn" id="2_n3dp3"]
[ext_resource type="AudioStream" uid="uid://c1vxqv2kfntrb" path="res://audio/sound_effects/Walking (Actually Royalty Free).wav" id="3_4puxp"]
[ext_resource type="Texture2D" uid="uid://dta7ryqekyn1j" path="res://assets/main_character/mc_walk_back.png" id="3_csoht"]
[ext_resource type="AudioStream" uid="uid://do78b3lo3fvf6" path="res://audio/sound_effects/Zaku Startup (NOT ROYALTY FREE).wav" id="3_cw7p2"]
[ext_resource type="Texture2D" uid="uid://b58l5o00kvl2b" path="res://assets/main_character/onscreen_badges/Cake Badge.png" id="3_jfdhw"]
[ext_resource type="Texture2D" uid="uid://ces0d526t6h24" path="res://assets/main_character/main_character_idle.png" id="3_kesid"]
[ext_resource type="Script" path="res://scripts/character_scripts/onscreen_badges.gd" id="3_mm6sa"]
[ext_resource type="Texture2D" uid="uid://bc4n87b1tlvtf" path="res://assets/main_character/mc _walk _side.png" id="4_mkejk"]
[ext_resource type="Texture2D" uid="uid://dahjr18jm1lbr" path="res://assets/main_character/onscreen_badges/Bowl Badge.png" id="4_vs3nv"]
[ext_resource type="Texture2D" uid="uid://b3lprn6nf8rf0" path="res://assets/main_character/onscreen_badges/Shiny Rock Badge.png" id="6_g43x7"]
[ext_resource type="Texture2D" uid="uid://o1qw7cxtqh43" path="res://assets/main_character/main_character_walk.png" id="6_t5tt4"]
[ext_resource type="Texture2D" uid="uid://cbt2kcvcmhgou" path="res://assets/main_character/main_character_wakeup.png" id="7_c02fe"]
[ext_resource type="Texture2D" uid="uid://ccg1w10hdovbu" path="res://assets/main_character/onscreen_badges/Carrot Badge.png" id="7_p3f81"]
[ext_resource type="Script" path="res://scripts/states/state_machine.gd" id="7_u7ptv"]
[ext_resource type="Script" path="res://scripts/states/idle_state.gd" id="8_5n5vl"]
[ext_resource type="Texture2D" uid="uid://8ubg4diy2ger" path="res://assets/main_character/onscreen_badges/Sword Badge.png" id="8_make3"]
[ext_resource type="Script" path="res://scripts/states/moving_state.gd" id="9_bdkni"]
[ext_resource type="Script" path="res://scripts/states/player_dialogue_state.gd" id="10_uarnf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7731s"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmrkr"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrmm8"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olc6p"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10vxv"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_derxv"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcweh"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bskr"]
atlas = ExtResource("2_emqss")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak80i"]
atlas = ExtResource("3_kesid")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wp08"]
atlas = ExtResource("3_kesid")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjbwf"]
atlas = ExtResource("3_kesid")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hopbq"]
atlas = ExtResource("3_kesid")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjso7"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7641p"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lws"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51t6s"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5puau"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl6wn"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbav7"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdyue"]
atlas = ExtResource("4_mkejk")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryec8"]
atlas = ExtResource("7_c02fe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swhuu"]
atlas = ExtResource("7_c02fe")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyxw0"]
atlas = ExtResource("7_c02fe")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sv48"]
atlas = ExtResource("7_c02fe")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ickr0"]
atlas = ExtResource("7_c02fe")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv46j"]
atlas = ExtResource("7_c02fe")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v07s"]
atlas = ExtResource("7_c02fe")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0657c"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aooh0"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_itsio"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52cd0"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdb0m"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxo1e"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbyix"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ciu"]
atlas = ExtResource("3_csoht")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p334d"]
atlas = ExtResource("6_t5tt4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6obxu"]
atlas = ExtResource("6_t5tt4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5y61"]
atlas = ExtResource("6_t5tt4")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70u7m"]
atlas = ExtResource("6_t5tt4")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dempq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7731s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmrkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrmm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olc6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10vxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_derxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcweh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bskr")
}],
"loop": true,
"name": &"down-walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak80i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wp08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjbwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hopbq")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjso7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7641p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51t6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5puau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl6wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbav7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdyue")
}],
"loop": true,
"name": &"side-walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryec8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swhuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyxw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sv48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ickr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv46j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v07s")
}],
"loop": false,
"name": &"spawn-in",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0657c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aooh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itsio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52cd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdb0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxo1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbyix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ciu")
}],
"loop": true,
"name": &"up-walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p334d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6obxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5y61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70u7m")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ob2iv"]
radius = 33.0151

[sub_resource type="CircleShape2D" id="CircleShape2D_bynmx"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wr5f8"]
radius = 40.3113

[sub_resource type="Gradient" id="Gradient_eh1pq"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_htlf5"]
gradient = SubResource("Gradient_eh1pq")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.83945, 0.770642)

[sub_resource type="Animation" id="Animation_htfb4"]
resource_name = "spawn_in"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(0.101532, 2.21914, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(9, 9), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartupSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2kok"]
_data = {
"spawn_in": SubResource("Animation_htfb4")
}

[node name="MainCharacter" type="CharacterBody2D"]
script = ExtResource("1_vdtrp")

[node name="ObjectiveOverlay" parent="." instance=ExtResource("2_n3dp3")]
position = Vector2(39, 31)

[node name="OnscreenBadges" type="Control" parent="."]
z_index = 99
layout_mode = 3
anchors_preset = 0
offset_left = -51.0
offset_top = -28.0
offset_right = -11.0
offset_bottom = 12.0
script = ExtResource("3_mm6sa")

[node name="Label" type="Label" parent="OnscreenBadges"]
layout_mode = 0
offset_left = 189.0
offset_top = -65.0
offset_right = 328.0
offset_bottom = -29.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 28
text = "Badges:"

[node name="Badges" type="Control" parent="OnscreenBadges"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShinyRockBadge" type="TextureRect" parent="OnscreenBadges/Badges"]
visible = false
layout_mode = 0
offset_left = 193.0
offset_top = -57.0
offset_right = 233.0
offset_bottom = -17.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_g43x7")

[node name="BowlBadge" type="TextureRect" parent="OnscreenBadges/Badges"]
visible = false
layout_mode = 0
offset_left = 202.0
offset_top = -60.0
offset_right = 266.0
offset_bottom = 4.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_vs3nv")

[node name="CarrotBadge" type="TextureRect" parent="OnscreenBadges/Badges"]
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = -48.0
offset_right = 256.0
offset_bottom = 16.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_p3f81")

[node name="CakeBadge" type="TextureRect" parent="OnscreenBadges/Badges"]
visible = false
layout_mode = 0
offset_left = 201.0
offset_top = -50.0
offset_right = 265.0
offset_bottom = 14.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_jfdhw")

[node name="SwordBadge" type="TextureRect" parent="OnscreenBadges/Badges"]
visible = false
layout_mode = 0
offset_left = 205.0
offset_top = -34.0
offset_right = 269.0
offset_bottom = 30.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_make3")

[node name="MushroomBadge" type="TextureRect" parent="OnscreenBadges/Badges"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cw7p2")
volume_db = -18.67
pitch_scale = 1.25

[node name="WalkingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4puxp")
volume_db = -14.991

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dempq")
animation = &"idle"
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="ActionableFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
shape = SubResource("CircleShape2D_ob2iv")
debug_color = Color(0.729412, 0.47451, 0, 0.0627451)

[node name="RadialDialogueIndicatorFinder" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadialDialogueIndicatorFinder"]
shape = SubResource("CircleShape2D_bynmx")
debug_color = Color(0.753369, 0.457743, 1.15514e-06, 0.180392)

[node name="AutoStartEncounterFinder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoStartEncounterFinder"]
shape = SubResource("CircleShape2D_wr5f8")
debug_color = Color(0.696507, 0.480085, 0.335533, 0.156863)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1, 7)
color = Color(0.988235, 0.968627, 0.847059, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_htlf5")
texture_scale = 2.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_u7ptv")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("8_5n5vl")

[node name="MovingState" type="Node" parent="StateMachine"]
script = ExtResource("9_bdkni")

[node name="PlayerDialogueState" type="Node" parent="StateMachine"]
script = ExtResource("10_uarnf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-10, 5, -10, 12, -8, 12, -8, 15, -2, 15, -2, 12, 2, 12, 2, 15, 8, 15, 8, 12, 10, 12, 10, 5, 15, 5, 15, -5, 16, -5, 16, -8, 15, -8, 15, -14, 14, -15, 7, -15, 7, -16, 5, -16, 5, -15, -3, -15, -3, -16, -6, -16, -6, -15, -13, -15, -14, -14, -14, -8, -15, -8, -15, -1, -14, -1, -14, 5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h2kok")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
